# uploader

./: .gitignore  .pylintrc  .versionrc.js  CHANGELOG.md  Makefile  Pipfile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
cgtwq_uploader/: __about__.py  __init__.py  __main__.py  __version__.py  cgtwq_helper.py  control.py  dialog.ui  model.py  util.py  view.py  window.py  window.ui
scripts/: python-version-updater.js  update-vendor.sh
