[tool.poetry]
name = "cgtwq_uploader"
version = "3.6.0"
description = "Uploader application for CGTeamwork."
authors = ["NateScarlet <NateScarlet@Gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
cgtwq = { git = "https://github.com/WuLiFang/cgtwq", tag = "v3.0.0-beta.2" }
wlf = { git = "https://github.com/WuLiFang/wlf", tag = "v0.6.0" }
"Qt.py" = "~1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

