[tool.poetry]
name = "cgtwq_uploader"
version = "3.6.0"
description = "Uploader application for CGTeamwork."
authors = ["NateScarlet <NateScarlet@Gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
cgtwq = { url = "https://github.com/WuLiFang/cgtwq/archive/v3.0.0-beta.3.tar.gz" }
wlf = { url = "https://github.com/WuLiFang/wlf/archive/v0.6.0.tar.gz" }
"Qt.py" = "~1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

